# mouse-cursor-mover

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/scripts/: package_macos_release.sh  release_tag_env.sh
.github/workflows/: ci.yml  release-assets.yml  release-please.yml
assets/macos/: Info.plist.append.xml
src/: app.rs  icons.rs  main.rs  mouse.rs  mover.rs  support.rs
