[package]
name = "mouse-cursor-mover"
version = "0.1.4"
edition = "2021"
description = "macOS menu-bar utility that moves the mouse cursor every 5 seconds to prevent sleep"
readme = "README.md"
license = "MIT"

[[bin]]
name = "mouse-cursor-mover"
path = "src/main.rs"

[dependencies]
tray-icon = "0.24"
winit = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }
global-hotkey = "0.6"

[package.metadata.bundle]
name = "Mouse Cursor Mover"
identifier = "com.roomjs.mouse-cursor-mover"
icon = ["assets/macos/icon_512x512.png", "assets/macos/icon_512x512@2x.png"]
osx_info_plist_exts = ["assets/macos/Info.plist.append.xml"]
